--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
-            <link rel="icon" type="image/png" href="Assets/img/cysphereLogo.png">
+            <link rel="icon" type="image/png" href="img/cysphereLogo.png">
             <title>Cysphere Theme</title>
 
             
@@ -15,7 +15,7 @@
     <body>
         <section id="nav-bar">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#"><img src="/Assets/img/cysphereLogo.png" id="navbar-logo-cysphere"/></a>
+                    <a class="navbar-brand" href="#"><img src="img/cysphereLogo.png" id="navbar-logo-cysphere"/></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-bars"></i>
@@ -72,11 +72,11 @@
                             </div>
                     </div>
                     <div class="col-md-2 text-center">
-                   <img src="Assets/img/home2.png" class="img-fluid">
+                   <img src="img/home2.png" class="img-fluid">
                     </div>
                 </div>
             </div>
-            <img src="Assets/img/wave-banner2.png" class="bottom-img">
+            <img src="img/wave-banner2.png" class="bottom-img">
         </section>
 
       <!------------------------- ABOUT SECTION  -------------------------------->
