Added about section to the site

--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
 
       <!------------------------- ABOUT SECTION  -------------------------------->
       <section id="about">
-          <div class="row">
+        
               <div class="container">
+                    <div class="row text-center">
                     <div class="col-md-12 text-center">
                             <h2 class="title-text">About <span class="red-color">Us</span></h2>
                             <p id="title-body">
@@ -90,8 +91,33 @@
                               As a business partner, we know that world-class service and cost effective solutions are the primary keys to success.
                             </p>
                           </div>
-                  <div class="col-md-4">
-                    
+                  <div class="col-md-6 about-col">
+                    <img src="img/about_img_010.png" class="about_img_01" >
+                    <h3 class="h3-list">Business Objectives</h3>
+                    <ul class="about-body">
+                        <div>
+                          <li>Consulting (Project Delivery, SOW)</li>
+                          <li>IT Solutions</li>
+                          <li>Staff Augmentation (Contract, Contract-to-Hire, Direct Hire)</li>
+                          <li>Offshore Staff Augmentation</li>
+                          <li>Global recruiting</li>
+                          <li>Payroll Services</li>
+                        </div>
+                      </ul>
+                  </div>
+                  <div class="col-md-6 about-col">
+                    <img src="img/about_img_020.png" class="about_img_02" >
+                    <h3 class="h3-list">Service Categories</h3>
+                    <ul class="about-body">
+                        <div>
+                            <li>Information Technology</li>
+                            <li>Engineering</li>
+                            <li>Accounting/Finance</li>
+                            <li>Scientific/Clinical</li>
+                            <li>Professional</li>
+                            <li>Mortgage</li>
+                        </div>
+                      </ul>
                   </div>
               </div>
           </div>
