added testimonial section to the page.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </ul>
                   </div> 
                   <div class="col-md-7">
-                    <div id="applicationPlaceholder" class="panel panel-default animation-right sol-panel-body" style="overflow-x:hidden;">
+                    <div id="applicationPlaceholder" class="panel panel-default animation-right sol-panel-body" style="overflow-x:hidden; background: #fff">
                       <div class="panel-body" >
                         <p>Our application solution expertise spans the following areas:</p>
                         <ul>
@@ -389,7 +389,7 @@
 
           <section id="services">
             <div class="container">
-                <div class="col-md-12 text-center solution-title-text">
+                <div class="col-md-12 text-center services-title-text">
                     <h2 class="title-text"><span class="blue-color">What <span class="deco">we</span> do?</span></h2>
                 </div>
               <div class="row grid-container-services">
@@ -428,8 +428,97 @@
               </div>
           </section>
 
+<!------------------------- TESTIMONIAL SECTION  --------------------------------> 
+
+<section id="testimonials">
+    <div class="container">
+        <div class="col-md-12 text-center testimonial-title-text">
+            <h2 class="title-text"><span class="blue-color">WHAT <span class="deco">CLIENTS</span> SAY</span></h2>
+            <p id="title-body">
+              Stories from our customers and how do they resonate with us...
+            </p>
+        </div>
+        <div class="row">
+         <div class="col-md">
+            <div class="sonar-wrapper">
+                <div class="sonar-emitter">
+                    <img src=".//img/icon/boy.png" style="width: 120px; height: 120px; margin: 5px 0 0 15px">
+                <div class="sonar-wave"></div>
+              </div>
+              <blockquote>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamsed commodo nibh ante facilisis bibendum dolor feugiat at. </p>
+            </blockquote>
+            <div class="testimonial-client"> <span class="testimonials-name">John Doe</span> 
+                <span class="testimonials-post">CEO,  Company Inc.</span> 
+            </div>
+            </div>
+            
+         </div>
+         <div class="col-md">
+            <div class="sonar-wrapper">
+                <div class="sonar-emitter">
+                 <img src=".//img/icon/girl.png" style="width: 120px; height: 120px; margin: 5px 0 0 15px">
+                <div class="sonar-wave"></div>
+              </div>
+              <blockquote>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamsed commodo nibh ante facilisis bibendum dolor feugiat at. </p>
+            </blockquote>
+            <div class="testimonial-client"> <span class="testimonials-name">Mary Jane</span> 
+                <span class="testimonials-post">CEO,  Company2 Inc.</span> 
+            </div>
+            </div>
+         </div>
+         <div class="col-md">
+            <div class="sonar-wrapper">
+                <div class="sonar-emitter">
+                 <img src=".//img/icon/man.png" style="width: 120px; height: 120px; margin: 5px 0 0 15px">
+                <div class="sonar-wave"></div>
+              </div>
+              <blockquote>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamsed commodo nibh ante facilisis bibendum dolor feugiat at. </p>
+            </blockquote>
+            <div class="testimonial-client"> <span class="testimonials-name">Brandon Carrol</span> 
+                <span class="testimonials-post">CEO,  Company3 Inc.</span> 
+            </div>
+            </div>
+         </div>
+        </div>
+
+    </div>
+</section>
+
+
+<!------------------------- FOOTER SECTION  --------------------------------> 
+
+          <footer class="footer-2 text-center-xs bg--white">
+            <div class="container">
+              <!--end row-->
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="footer">
+                    © Copyrights 2019 CYBERSPHERE LLc.
+                    <div class="credits">
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 text-right">
+                  <ul class="social-list">
+                    <li>
+                      <a href="#"><i class="fa fa-linkedin-square"></i></a>
+                    </li>
+                    <li>
+                      <img class="e-verify-logo" src="img/E-Verify-logo.png" width="180px" height="50px" alt="e-verify-logo">
+                    </li>
+                  </ul>
+                </div>
+        
+              </div>
+              <!--end row-->
+            </div>
+          </footer>
+          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+          <script type="text/javascript" src="js/main.js"></script>
     </body>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+
 </html>
