added contact-us section and smooth-scroll

--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">ABOUT</a>
+                                <a class="nav-link" href="#about">ABOUT</a>
                             </li>
                             <li class="nav-item">
-                                    <a class="nav-link" href="#">SOLUTIONS</a>
+                                    <a class="nav-link" href="#solutions">SOLUTIONS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">SERVICES</a>
+                                <a class="nav-link" href="#services">SERVICES</a>
                             </li>
                             <li class="nav-item">
-                                    <a class="nav-link" href="#">TESTIMONIALS</a>
+                                    <a class="nav-link" href="#testimonials">TESTIMONIALS</a>
                                 </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">CONTACT</a>
+                                <a class="nav-link" href="#contact">CONTACT</a>
                             </li>
                         </ul>
                     </div>
@@ -81,7 +81,6 @@
 
       <!------------------------- ABOUT SECTION  -------------------------------->
       <section id="about">
-        
               <div class="container">
                     <div class="row text-center">
                     <div class="col-md-12 text-center">
@@ -488,6 +487,83 @@
 </section>
 
 
+
+<!------------------------- CONTACT US SECTION ----------------------------------->
+
+<section id="contact">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center contact-us-title-text">
+        <h2 class="title-text"><span class="blue-color">Contact <span class="red-color">Us</span></span></h2>
+    </div>
+      <div class="col-md-4">
+        <ul class="contact-us-location-container">
+          <li class="no-inline-group">
+            <i class="fa fa-map-marker contact-us-icon-map" aria-hidden="true"></i>
+            <h4>Office - New Hampshire</h4>
+            <p class="address-content">131, Daniel Webster Hwy<br />
+            Suite #226, Nashua <br />
+            NH - 03060 <br />
+            Phone: (617) 959-9353 <br />
+            Fax: (770) 752-4101 <br />
+          </p>
+          </li>
+          <li class="inline-group">
+            <i class="fa fa-map-marker contact-us-icon-map" aria-hidden="true"></i>
+            <h4>Office - Georgia</h4>
+            <p class="address-content">5490 McGinnisVillage Place<br />
+            #230, Alpharetta <br />
+            GA - 30005 <br />
+            Phone: (203) 722-5355 / (770) 752-4235<br />
+            Fax: (770) 752-4101 <br />
+          </p>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <ul class="contact-us-location-container">
+          <li class="no-inline-group">
+            <i class="fa fa-map-marker contact-us-icon-map" aria-hidden="true"></i>
+            <h4>Office - India</h4>
+            <p class="address-content">Cyber Sphere IT Service India Pvt Ltd <br />
+              101, Sripriya Towers <br />
+              Madhapur, Hyderabad <br />
+              Andhra Pradesh, India -500033 <br />
+              Phone: (+91) 40-23117999
+            </p>
+          </li>
+        </ul>
+      </div>
+
+      <!-- <div class="col-md">
+        <div id="sendmessage">Your message has been sent. Thank you!</div>
+        <div id="errormessage"></div>
+        <form role="form" method="post" class="contactForm">
+          <div class="form-group">
+            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+            <div class="validation"></div>
+          </div>
+          <div class="form-group">
+            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+            <div class="validation"></div>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+            <div class="validation"></div>
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+            <div class="validation"></div>
+          </div>
+
+          <div class="text-center"><button id="submit" type="submit" class="btn btn-primary btn-lg">Send Message</button></div>
+        </form>
+      </div>  -->
+
+    </div>
+  </div>
+</section>
+
 <!------------------------- FOOTER SECTION  --------------------------------> 
 
           <footer class="footer-2 text-center-xs bg--white">
@@ -518,7 +594,9 @@
           </footer>
           <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+          <script type="text/javascript" src="js/smooth-scroll.js"></script>
           <script type="text/javascript" src="js/main.js"></script>
+    
     </body>
 
 </html>
